--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
-								<h1>J<span>D</span></h1>
+								<h1>M<span>K</span></h1>
 							</a>
 						</li>
 						<li>
@@ -449,7 +449,11 @@
 							supported the literacy learning that happens within the classroom.
 							</p>
 
-							<p><h3>Family fun day</h3></p>
+							<p><h3>Family fun day</h3>
+
+							I directed visitors and guests towards designated
+
+							</p>
 						
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
