--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		Title and Meta Tags
 		=============================================== -->
 		<meta charset="utf-8">
-		<title>Me Flat | Flat Personal Portfolio</title>
+		<title>Mahlon</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
