--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 			<h1 class="dribbble-button"><a href="#" target="_blank">My Dribbble Shots</a></h1>
 				<div class="row">
 					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="Assets/Mahlon Kirwa Resume.pdf" target="_blank"><img class="img-responsive" src="assets/Resume.jpg"  alt=""></a>
+						<a href="assets/resume.pdf" target="_blank"><img class="img-responsive" src="assets/Resume.jpg"  alt=""></a>
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<a href="#link" target="_blank"><img class="img-responsive" src="assets/skills.jpg"  alt=""></a>
