--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 							</p>
 							<p> <h3>Summer Institute of Emerging Managers and Leaders</h3> I was among one of the 50 students selected to participate in the competitive program. The program aims at providing leadership skills to students as well as making them aware of business related opportunities available across the United States.
 							I had the opportunity of meeting Kaiser Permanante C.E.O, Bernard Tyson and meeting the top leadership of Wells Fargo as well. I received tutorials from UC Davis' renowned professors.
-							I had the occasion of participating in Deloitte case competitions and meeting their executives and recruiters. The case competition enhanced interaction and teamwork. In 2015, the program was held at San Diego. Here, I was able to meet the president and the CEO of Jack in the Box, Qualcomm executive board, Deloitte recruiters, Wells Fargo executives and recruiters and had leadership sessions  with the School's preeminent professors. </p>
+							I had the occasion of participating in Deloitte case competitions and meeting their executives and recruiters. The case competition enhanced interaction and teamwork. In 2015, the program was held at San Diego. Here, I was able to meet the president and the CEO of Jack in the Box, Qualcomm executive board, Deloitte recruiters, Wells Fargo executives and recruiters and had leadership sessions  with the School's prominent professors. </p>
 							</p>
 							<!-- <p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Home<i class="fa fa-arrow-right"></i></a></p> -->
 
@@ -621,30 +621,33 @@
 			</div><!-- End modal -->
 			
 		</section>
+
+
 		<!-- ==============================================
 		DRIBBLE 
 		=============================================== -->	
 		<section id="dribbble">
 			<h1 class="dribbble-button"><a href="#" target="_blank">My Dribbble Shots</a></h1>
 				<div class="row">
-					<div class="col-md-2 col-sm-4 col-xs-6">
+					<div class="col-md-3 col-sm-5 col-xs-200">
 						<a href="assets/resume.pdf" target="_blank"><img class="img-responsive" src="assets/Resume.jpg"  alt=""></a>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/skills.jpg"  alt=""></a>
+
+					<div class="col-md-3 col-sm-5 col-xs-200">
+						<a href="#services"><img class="img-responsive" src="assets/skills.jpg"  alt=""></a>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
+					<div class="col-md-3 col-sm-5 col-xs-200">
+						<a href="#about"><img class="img-responsive" src="assets/aboutme.png"  alt=""></a>
+					</div>
+					<div class="col-md-3 col-sm-5 col-xs-200">
+						<a href="#portfolio"><img class="img-responsive" src="assets/achievements2.png"  alt=""></a>
+					</div>
+					<!-- <div class="col-md-2 col-sm-4 col-xs-6">
 						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
+					</div> -->
 				</div>
 		</section>
 		<!-- ==============================================
@@ -661,11 +664,8 @@
 						<p>Email address 1 : mahlonkibiwott@gmail.com</p>
 						<p>Email address 2 : mkirwa@claflin.edu </p>
 						<p>Phone : 803 662 5493 </p>
-						<p>
-							<a href="Assets/Mahlon Kirwa Resume.pdf"><H3>Resume </h3></a>
-						</p>
-
 					<p><h3>You could as well leave me your message and contact below<h3></p>
+						<p><h3>Thank you</h3></p>
 					</p>
 				
 				</header>
@@ -694,6 +694,7 @@
 			</div>
 		
 		</section>
+
 		
 		<!-- ==============================================
 		FOOTER
