--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 		DRIBBLE 
 		=============================================== -->	
 		<section id="dribbble">
-			<h1 class="dribbble-button"><a href="#" target="_blank">My Dribbble Shots</a></h1>
+			<h1 class="dribbble-button"><a href="#" target="_blank">Quick Links</a></h1>
 				<div class="row">
 					<div class="col-md-3 col-sm-5 col-xs-200">
 						<a href="assets/resume.pdf" target="_blank"><img class="img-responsive" src="assets/Resume.jpg"  alt=""></a>
