--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 				
 					<h1 class="scrollimation scale-in">Contact me at </h1>
 					<p>
-						<p>Email address 1 : mahlonkibiwott@gmail.com</p>
+						<p>Email address : mahlonkibiwott@gmail.com</p>
 						<p>Phone : 803 662 5493 </p>
 					<p><h3>You could as well leave me your message and contact below<h3></p>
 						<p><h3>Thank you</h3></p>
@@ -748,6 +748,16 @@
 		<script src="js/contact.js"></script>
 		<script src="js/meflat.js"></script>
 		
+		<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68537324-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	</body>
 	
 </html>
