after making some changes

--- a/index.html
+++ b/index.html
@@ -2,16 +2,7 @@
 <html lang="en-US" class="no-js">
 	<head>
 
-		<script>
-  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  		ga('create', 'UA-68537324-1', 'auto');
-  		ga('send', 'pageview');
-
-		</script>
+		
 
 
 
@@ -368,7 +359,7 @@
 							data-client="" 
 							data-link="" 
 							data-descr="I have served in several leadership positions. I am one of the co-founders of Eldoret Academic Scholar Program, I am a member of PanAfrican Scholar program, I led Kenya Youth Association Soy Division as their chair and I was the president of International Student's Association as well. Currently I am NSBE Senator." 
-							data-images="assets/Sieml.jpg,assets/ISA.jpg"
+							data-images="assets/Sieml.jpg,assets/ISA.jpg, assets/boa.jpg"
 						>
 							<p>
 								<h3>President International Students Association</h3>
@@ -398,7 +389,9 @@
 							</p>
 							<!-- <p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Home<i class="fa fa-arrow-right"></i></a></p> -->
 
-							<p>
+							<p><h3>3rd Annual Global Technology and Operations Diversity Summit</h3>
+								We had the opportunity to meet Bank of America's C.E.O's and executives. They trained us on good leadership skills through the sequence of platform presentations from a parade of executives. We had motivational speakers who addressed the purpose of deterministic leadership. The program was winded up by case competitions and mock interviews from Bank of America recruiters. The case competitions taught us the value of teamwork. We had to work as a group, analyze a situation, and propose a strategy under severe time pressures which provided a real world experience in solving problems during internships and jobs.
+							</p>
 						</div>
 						
 					</article>
@@ -758,6 +751,17 @@
 		<script src="js/jquery.easypiechart.js"></script>
 		<script src="js/contact.js"></script>
 		<script src="js/meflat.js"></script>
+
+		<script>
+  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  		ga('create', 'UA-68537324-1', 'auto');
+  		ga('send', 'pageview');
+
+		</script>
 		
 
 	</body>
